Fixed the issue of distortion of Sai Sandsh image

--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -115,6 +115,7 @@ swiper-container {
   border: 6px solid white;
   overflow: hidden;
   box-sizing: border-box;
+  text-align: center;
 }
 
 @media (max-width: 768px) {
