--- a/src/styles.scss
+++ b/src/styles.scss
@@ -109,7 +109,7 @@ p {
   // height: 333px;
   border-radius: 12px;
   border: 6px solid white;
-  background-size: 360px 738px;
+  //background-size: 360px 738px;
   background-position: top;
 
   .dateDiv {
